# Multilayer-Perceptron

./: .gitignore  README.md  Research.md  lll.txt
build-src-hhullen_kit-Debug/: CMakeCache.txt  Makefile  Multilayer_Perceptron  cmake_install.cmake  qtcsettings.cmake
build-src-hhullen_kit-Debug/.cmake/api/v1/reply/: cache-v2-14aea25d752030f03404.json  cache-v2-a2667ddc9a1a4e1fc3dd.json  cmakeFiles-v1-4af32e3da2744803f352.json  cmakeFiles-v1-d280b21b3a5398dcd1f9.json  codemodel-v2-8d215e70ba9ad63a641f.json  codemodel-v2-f39da41b8fa850693389.json  index-2022-10-29T12-24-16-0323.json  index-2022-11-16T20-20-22-0336.json  target-Multilayer_Perceptron-Debug-70a07f8dcc368b2e4fec.json
build-src-hhullen_kit-Debug/.qtc_clangd/: compile_commands.json
build-src-hhullen_kit-Debug/.qtc_clangd/.cache/clangd/index/: __stddef_max_align_t.h.809FBEBF13A9D100.idx  aligned_buffer.h.2B31909749C39FCF.idx  alloc_traits.h.420C70D9F7485A1C.idx  allocated_ptr.h.1A80F1EB909495F6.idx  allocator.h.26198D88CC35637C.idx  array.7BA5A58BDA1D080A.idx  atomic_base.h.69CEC6671C18DCA5.idx  atomicity.h.CD21F41650A96779.idx  auto_ptr.h.59C1C081F3CB1DEE.idx  basic_file.h.A3307D8E54756B9E.idx  basic_string.h.8D7BA8904A54FBE0.idx  basic_string.tcc.FA76DCC363B63406.idx  bessel_function.tcc.D5480BFE0AA6DB9C.idx  beta_function.tcc.E3CC2093E3CF3A79.idx  binders.h.F30490DCC7E583C3.idx  c++allocator.h.F8337871273919B1.idx  c++locale.h.A5617667E30CBBBA.idx  (+115 more)
experiment/: Makefile  experiment.cc  matrix_implementation.txt  research.md
src/: CMakeLists.txt  Makefile  cfg_130_5_60_0.01.wcfg  learning_130_2_30.txt  learning_130_2_60.txt  learning_130_3_30.txt  learning_130_3_60.txt  learning_130_4_30.txt  learning_130_4_60.txt  learning_130_5_30.txt  learning_130_5_60.txt  main.cc  t.cc
src/CFG/: cfg_130_2_60_0.01.wcfg
src/MLP/: CMakeLists.txt  Info.plist  MLP.pro  MLP_en_US.ts  main.cc  main.cpp
src/MLP/Controller_module/: mlp_controller.cc  mlp_controller.h
src/MLP/Model_module/: const.h  mlp_model.cc  mlp_model.h  perceptron.cc  perceptron.h  perceptron_layer.h
src/MLP/Model_module/graph_implementation/: Makefile  g_neuron.h  g_perceptron.cc  g_perceptron.h  t.cc
src/MLP/Model_module/matrix_implementation/: perceptron.cc  perceptron.h  perceptron_layer.h
src/MLP/Resources/: photosurface.icns
src/MLP/Test_module/: MLP_test.cc
src/MLP/View_module/: classifier.cc  classifier.h  classifier.ui  confirmationdialog.cc  confirmationdialog.h  confirmationdialog.ui  graph.cc  graph.h  graph.ui  inputarea.cc  inputarea.h  main_menu.cc  main_menu.h  main_menu.ui  mainwindow.cc  mainwindow.h  mainwindow.ui  option.cc  option.h  option.ui  progressbar.cc  progressbar.h  progressbar.ui  testing.cc  testing.h  testing.ui  testtablerow.cc  testtablerow.h  testtablerow.ui  training.cc  training.h  training.ui
src/MLP/include/matrix/: matrix.cc  matrix.h
src/Model_module/: Makefile  perceptron.cc  perceptron.h  perceptron_layer.h  t.cc
src/build-MLP-hhullen_kit-Debug/: CMakeCache.txt  CMakeCache.txt.prev  Makefile  cmake_install.cmake
src/build-MLP-hhullen_kit-Debug/.cmake/api/v1/reply/: cache-v2-083631329ebc242731bd.json  cache-v2-29c1713ac7bab265dad6.json  cache-v2-e222f7f0662710781ee7.json  cmakeFiles-v1-12965a3afc7506970d53.json  cmakeFiles-v1-1a5f3c3658ce26bbf58f.json  cmakeFiles-v1-55cad6e12c75571acc25.json  codemodel-v2-127c7c7348e480285bbb.json  codemodel-v2-ad687056e1295a8e9cc7.json  codemodel-v2-cc5e7119c8b093fc6257.json  index-2022-10-18T17-51-51-0052.json  index-2022-10-29T12-25-18-0332.json  index-2022-11-16T20-22-18-0513.json  target-MLP-Debug-9271e291733770d04c84.json  target-MLP-Debug-b75ca920ba64c8f1836d.json  target-MLP-Debug-dbf884798fa8beee1a93.json  target-MLP_autogen-Debug-9af72a16e84b38375a40.json
src/build-MLP-hhullen_kit-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-bcef5354c7ca6c483710.json  index-2022-10-17T12-54-32-0537.json  index-2022-10-17T13-09-08-0675.json  target-MLP-Debug-1e0e3db98487361d4bb2.json  target-MLP_autogen-Debug-ba6e7c6df36f97b59b4a.json
src/build-MLP-hhullen_kit-Debug/.qtc_clangd/: compile_commands.json
src/build-MLP-hhullen_kit-Debug/.qtc_clangd/.cache/clangd/index/: QAbstractAxis.C3D5447F59DCF2BF.idx  QAbstractButton.3FAE83F27A70BC4C.idx  QAbstractSeries.13DF987D086738E9.idx  QApplication.A9ECB5243B02F822.idx  QBrush.228844604A3B416B.idx  QButtonGroup.99BE185E085C2058.idx  QChart.561552BB374DE853.idx  QChartGlobal.7DD05D483074CAD0.idx  QChartView.A5F4A5D8D2470BE6.idx  QComboBox.84E3A1A554AB9AE9.idx  QDoubleSpinBox.26D9C730B05CB1BF.idx  QFont.D4D926DB50B48173.idx  QGraphicsScene.CA3C1A112BA3A305.idx  QGraphicsView.493AA21327BF904E.idx  QGraphicsView.60503E095F73E733.idx  QGraphicsView.F835D47F95E7A3D7.idx  QGraphicsWidget.EFB1C405692313A5.idx  QGridLayout.296756F65278316F.idx  QGridLayout.4702F6DA09ADF691.idx  QImage.6E7C1A891890FBA7.idx  QLabel.FE8EFFD194563482.idx  QLegend.DB4A529C0CCBFD16.idx  QList.A297828DABEE456B.idx  QLocale.579D556260E47685.idx  QMargins.5059723C7BF70300.idx  QObject.59A4C69DE51D5133.idx  QPainter.FFD5B28C9180676D.idx  QPen.DFB987E11B25A981.idx  QPointF.80FB537DE838AB7F.idx  QPushButton.C4C991DCF5196316.idx  QRect.0AB56DCD680C3A35.idx  QScrollArea.2A06E1DA83F7DB52.idx  QSize.8AF2664BD168CCBE.idx  QSizeF.1B7B0580593A37E7.idx  QSpinBox.3EF75FB58702A1E0.idx  QSplineSeries.342F543BA8473386.idx  QSysInfo.9BEC1D34A3C9F2F1.idx  QTextBrowser.FBACB64117DA306F.idx  QTime.C9A0E211AC0E1F7A.idx  QTransform.C24A2E84D1AFE327.idx  (+500 more)
src/build-MLP-hhullen_kit-Debug/MLP_autogen/: moc_predefs.h  mocs_compilation.cpp
src/build-MLP-hhullen_kit-Debug/MLP_autogen/CW6BJZZ4FM/: moc_classifier.cpp  moc_graph.cpp  moc_inputarea.cpp  moc_main_menu.cpp  moc_mainwindow.cpp  moc_option.cpp  moc_progressbar.cpp  moc_testing.cpp  moc_testtablerow.cpp  moc_training.cpp
src/build-MLP-hhullen_kit-Debug/MLP_autogen/include/: ui_graph.h  ui_main_menu.h  ui_mainwindow.h  ui_option.h  ui_testing.h  ui_training.h
src/dvi/: info.texi
src/include/: matrix_oop.cc  matrix_oop.h
src/include/container/: vector.h
src/include/matrix/: matrix.cc  matrix.h
